# kleis

./: README.md
api/: README.md  pyproject.toml
data/: README.md  load_catalog.py  load_inventory.py  products.yaml  schema.sql
frontend/: .dockerignore  .eslintrc.js  .gitignore  .prettierrc  Caddyfile  Dockerfile  README.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/src/components/: AppProvider.tsx  CartItem.tsx  CartPageClient.tsx  CartPreview.tsx  CartPreviewItem.tsx  ContactForm.tsx  Footer.tsx  Header.tsx  LivePriceUpdater.ts  NotifyMeForm.tsx  OrderSummary.tsx  PersistentSuggestProduct.tsx  ProductCard.astro  ProductCard.tsx  ProductDetailClient.tsx  ProductDetailsSection.tsx  ProductHero.tsx  ProductSearch.tsx  ProductSequenceInfo.tsx  ProductsDisplay.tsx  QuantitySelector.tsx  RelatedProductCard.tsx  RelatedProducts.tsx  StickyAddToCartBar.tsx  StockStatusBadge.tsx  SuggestProductCTA.tsx  SuggestProductModal.tsx  VariantSelector.tsx
frontend/src/components/icons/: FlaskOutlineIcon.tsx
frontend/src/components/ui/: button.tsx  use-toast.ts
frontend/src/context/: CartContext.tsx
frontend/src/hooks/: useCart.ts
frontend/src/hooks/__tests__/: useCart.test.tsx
frontend/src/layouts/: Layout.astro
frontend/src/lib/: cartManager.ts  cartStore.ts  utils.ts
frontend/src/pages/: about.astro  cart.astro  contact.astro  index.astro  products.astro
frontend/src/styles/: globals.css
frontend/src/types/: cart.ts  product.ts
(+6 files in other folders)
